# hecta-palm

./: .gitattributes  .gitignore  FOLLOW_ON.md  README.md  RESULTS.md  ZIP.md  plan1.md  plan2.md
experiment_runtime/: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml
experiment_runtime/configs/data/: stage1_corpora.toml  stage2_attack_prompts.toml  stage3_filter_messages.toml  tier1.toml
experiment_runtime/configs/eval/: stage1_mia.toml  stage1_mia_timing.toml  stage2_filtered_replay.toml  stage2_replay.toml  stage3_fhe_filter.toml  stage3_plaintext_filter.toml
experiment_runtime/configs/protocol/: core.toml  stage1.toml  stage2.toml  stage3.toml
experiment_runtime/configs/train/: stage1_lora.toml
experiment_runtime/data/processed/: canary_registry.csv  stage2_attack_prompts.jsonl  stage3_filter_messages_test.jsonl  stage3_filter_messages_train.jsonl  stage3_filter_messages_val.jsonl  tier1_records.parquet
experiment_runtime/runs/: .gitignore  final_artifact_audit.json
experiment_runtime/runs/stage1/: official_runs_summary.json
experiment_runtime/runs/stage1/mia/: mia_summary.json
experiment_runtime/runs/stage1/official-10x-20260411-r1/: resolved_config.toml  run_metadata.json  train_metrics.json
experiment_runtime/runs/stage1/official-1x-20260411-r1/: environment.json  resolved_config.toml  run_metadata.json  train_metrics.json
experiment_runtime/runs/stage1/official-50x-20260411-r1/: resolved_config.toml  run_metadata.json  train_metrics.json
experiment_runtime/runs/stage1/smoke-1x-20260410-r3/: environment.json  resolved_config.toml  run_metadata.json  train_metrics.json  trainer_state.json
experiment_runtime/runs/stage2/baseline/: stage2_summary.json
experiment_runtime/runs/stage2/filtered/: filter_parity_summary.json  stage2_filtered_summary.json
experiment_runtime/runs/stage3/fhe/: compiled_bundle_manifest.json  context_metadata.json  latency_samples.csv  latency_summary.json  plaintext_vs_fhe_comparison.csv  stage3_fhe_metrics.json
experiment_runtime/runs/stage3/plaintext/: encoder_metadata.json  model_selection.csv  stage3_plaintext_metrics.json  test_predictions.csv  validation_threshold_sweep.csv
experiment_runtime/src/experiment/: __init__.py
experiment_runtime/src/experiment/attacks/: __init__.py  stage2_catalog.py
experiment_runtime/src/experiment/chat_render/: __init__.py  benign.py
experiment_runtime/src/experiment/data_gen/: __init__.py  config.py  io.py  materialize_tier1.py  stage1_config.py  stage1_corpora.py  stage1_validators.py  stage2_attack_prompts.py  stage2_config.py  stage2_validators.py  stage3_config.py  stage3_filter_messages.py  stage3_validators.py  tier1.py  validators.py
experiment_runtime/src/experiment/eval/: __init__.py  cli.py  config.py  data.py  filtered_cli.py  metrics.py  runner.py  scoring.py
experiment_runtime/src/experiment/fhe/: __init__.py  cli.py  config.py  data.py  metrics.py  openfhe_backend.py  runner.py
experiment_runtime/src/experiment/filter_train/: __init__.py  cli.py  config.py  data.py  embeddings.py  metrics.py  runner.py  stage3_catalog.py
experiment_runtime/src/experiment/mia/: __init__.py  cli.py  config.py  data.py  metrics.py  runner.py
experiment_runtime/src/experiment/schemas/: __init__.py  stage2.py  stage3.py  tier1.py  tier2.py
experiment_runtime/src/experiment/train_qwen/: __init__.py  cli.py  config.py  data.py  runner.py
experiment_runtime/src/qwen_langgraph_demo/: __init__.py  main.py  test_endpoint.py
experiment_runtime/src/qwen_langgraph_demo/graph/: __init__.py  builder.py  state.py
experiment_runtime/src/qwen_langgraph_demo/nodes/: __init__.py  filter_middleware.py  fraud_scorer.py  intake.py  router.py
experiment_runtime/src/qwen_langgraph_demo/runtime/: __init__.py  model.py  protocol.py  (+1 more)
experiment_runtime/tests/: test_graph_scaffold.py  test_protocol_loading.py  test_stage1_corpora.py  test_stage1_mia.py  test_stage1_training_pipeline.py  test_stage2_attack_prompts.py  test_stage2_eval.py  test_stage2_filtered_eval.py  test_stage3_fhe.py  test_stage3_filter_messages.py  test_stage3_plaintext_filter.py  test_tier1_data_generation.py
multiagent/: .env.example  README.md  SETUP.md  pyproject.toml
multiagent/src/qwen_langgraph_demo/: __init__.py  main.py  test_endpoint.py
(+146 files in other folders)
